--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="main.css" media="screen" type="text/css">
   <title>Kitted</title>
 </head>
-  <body>
-    <div class="container">
+  <body class="fondo container">
+    <!-- <div class="container"> -->
       <picture>
-        <source media="(max-width:800px)" srcset="img/kitten-small.png">
-        <source media="(max-width:1000px)" srcset="img/kitten-large.png">
+        <source media="(max-width:600px)" srcset="img/kitten-small.png">
+        <source media="(max-width:900px)" srcset="img/kitten-large.png">
         <img src="img/kitten-medium.png" alt="gato">
       </picture>
-    </div>
+    <!-- </div> -->
   </body>
 </html>
